--- a/styles.css
+++ b/styles.css
@@ -276,6 +276,53 @@ footer p {
 .education em {
     color: #757575;
 }
+.education img {
+    max-width: 100%; /* S'assure que l'image ne dépasse pas la largeur du conteneur */
+    height: auto; /* Conserve le ratio d'aspect de l'image */
+    border-radius: 5px; /* Coins arrondis pour les images */
+    margin-top: 10px; /* Espace entre l'image et le texte précédent */
+}
+/* Styles pour les images dans la section éducation */
+.img-container {
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+}
+
+.img-container img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 5px;
+    transition: transform 0.3s ease;
+}
+
+.img-container img:hover {
+    transform: scale(1.05); /* Agrandir légèrement l'image au survol */
+}
+
+/* Styles pour le zoom */
+.img-zoom {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1000;
+    max-width: 90%;
+    max-height: 90%;
+    border-radius: 10px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+}
+
+.img-zoom-bg {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.8);
+    z-index: 999;
+}
+
 
 /* Section Expérience */
 #experience {
